fixed white space, shrunk carousel

--- a/src/Dashboard/Events/Events.css
+++ b/src/Dashboard/Events/Events.css
@@ -171,13 +171,6 @@
   font-weight: bold;
 }
 
-/* .carousel,
-.item,
-.carouselImage {
-  height: 20vh;
-  margin: auto;
-} */
-
 /* .carousel .item img {
   left: -9999px;
   right: -9999px;
