--- a/src/Dashboard/dashboard.css
+++ b/src/Dashboard/dashboard.css
@@ -3,7 +3,7 @@
   .eventListImage {
     width: 100%;
     height: 100%;
-    max-width: 20vw;
+    max-width: 12vw;
     border-radius: 2em;
   }
   .hotelListImage {
