--- a/src/app.css
+++ b/src/app.css
@@ -187,7 +187,7 @@ button {
   justify-content: flex-end;
   align-items: baseline;
   width: 100%;
-  height: 10vh;
+  height: 7vh;
 }
 #header > * {
   margin: 2%;
